# ProPal

./: .gitignore  LICENSE  README.md  main.spec  pyproject.toml
backend/: error.py  models.py
backend/agents/: agent_coordinator.py  base_agent.py  llm_agent.py  retriever_agent.py
backend/tools/: __init__.py  database.py  native_browser_manager.py  string_template.py  utils.py
backend/tools/markdown_parser/: __init__.py  markdown_parser.py  style.css
data/: data.db
dev_utils/: READEME.md  db.py
frontend/: add_libs.py  commands.py  hotkey_manager.py  main.py  utils.py
frontend/components/: chat_history_widget.py  chat_text_edit.py  command_result_list.py  command_text_edit.py  copy_commands.py  dialogs.py  form_dialogs.py  llm_response_commands.py  new_prompt.py  search_result_list.py  short_text_viewer.py  string_template_filling_dialog.py
frontend/widgets/: dialog.py  label.py
frontend/windows/: base.py  chat_window.py  command_window.py  search_window.py
frontend/windows/components/: command_text_edit.py
setting/: default.json  default.toml  setting_reader.py  user.toml
